# christina

./: .gitignore  Cargo.toml  README.md  index.html  package.json
frontend/: app.js
src/: app.rs  color.rs  config.rs  lib.rs  main.rs  ocr.rs  panel.rs  signal.rs  sites.rs  translate.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  main.rs  panel.rs  signal.rs  sites.rs  web_cmds.rs
