[package]
name = "christina"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
arboard = "3.2"
directories = "4.0"
eframe = { version = "0.20", default-features = false, features = [
    "default_fonts",
    "wgpu",
] }
image = "0.24"
regex = "1.7"
screenshots = "0.4"
tesseract = "0.12"
time = { version = "0.3", features = ["formatting", "local-offset"] }
tl = "0.7"
ureq = "2.6"

[profile.release]
lto = "thin"
codegen-units = 4
# strip = "debuginfo"
split-debuginfo = 'packed' # https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
