[package]
name = "christina"
version = "0.3.1"
description = "An assistant to help play with `STEINS;GATE`."
authors = ["Light Ning <root@i01.io>"]
license = "Apache-2.0/MIT"
homepage = "https://github.com/light4/christina"
repository = "https://github.com/light4/christina"
default-run = "christina"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2"
chrono = { version = "0.4", default-features = false, features = [
    "std",
    "clock",
] }
color-eyre = "0.6"
directories = "5.0"
image = "0.24"
once_cell = "1.17"
open = "4.0"
regex = "1.7"
screenshots = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_qs = "0.12"
signal-hook = "0.3"
sysinfo = "0.28"
tesseract = "0.13"
tl = "0.7"
ureq = "2.6"
wry = { version = "0.27", features = ["tray"] }

[profile.release]
lto = "thin"
codegen-units = 4
# strip = "debuginfo"
split-debuginfo = 'packed' # https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
